# QWlanManager

./: .gitignore  CMakeLists.txt  README.md  annotated.html  cachepolicy_8h_source.html  classes.html  classqwm_1_1_cache_policy-members.html  classqwm_1_1_cache_policy.html  classqwm_1_1_interface-members.html  classqwm_1_1_interface.html  classqwm_1_1_manager-members.html  classqwm_1_1_manager.html  classqwm_1_1_manager__inherit__graph.map  classqwm_1_1_manager__inherit__graph.md5  classqwm_1_1_network-members.html  classqwm_1_1_network.html  classqwm_1_1_permissions-members.html  classqwm_1_1_permissions.html  classqwm_1_1_permissions__coll__graph.md5  classqwm_1_1_permissions__inherit__graph.map  dir_2226e7cee458e944ce416b5f99af0923.html  dir_2226e7cee458e944ce416b5f99af0923_dep.map  dir_2226e7cee458e944ce416b5f99af0923_dep.md5  dir_310277d7d6fdad659af4ef2be694d464.html  dir_310277d7d6fdad659af4ef2be694d464_dep.map  dir_310277d7d6fdad659af4ef2be694d464_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6dd2d287d08a289e9849dd6e2f6b9333.html  dir_6dd2d287d08a289e9849dd6e2f6b9333_dep.map  dir_6dd2d287d08a289e9849dd6e2f6b9333_dep.md5  dir_70c3499589c9c28a944956fd66d0bf8b.html  dir_70c3499589c9c28a944956fd66d0bf8b_dep.map  dir_70c3499589c9c28a944956fd66d0bf8b_dep.md5  dir_92cd44146747b876a6ff4f2d460daba7.html  dir_92cd44146747b876a6ff4f2d460daba7_dep.map  dir_92cd44146747b876a6ff4f2d460daba7_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  (+26 more)
docs/fragments/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public-api.in
include/qwlanmanager/: interface.h  manager.h  network.h  permissions.h  qwlanman_global.h.in  qwlantypes.h
include/qwlanmanager/cache/: cachepolicy.h
include/qwlanmanager/datas/: interface.h  network.h
metadata/windows/: infos.rc.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  (+13 more)
src/: factorybackend.cpp  factorybackend.h  interface.cpp  manager.cpp  manager_priv.cpp  manager_priv.h  network.cpp  permissions.cpp  permissions_priv.cpp  permissions_priv.h  qwlanhelper.cpp  qwlanhelper.h  qwlantypes.cpp
src/backend/: enginemock.cpp  enginemock.h
src/backend/corewlan/: enginecorewlan.h  enginecorewlan.mm  permissioncorewlan.h  permissioncorewlan.mm
src/backend/mock/: enginemock.cpp  enginemock.h  permissionsmock.cpp  permissionsmock.h
src/backend/networkmanager/: datasdelegates.cpp  datasdelegates.h  deviceinfoprovider.cpp  deviceinfoprovider.h  enginenetworkmanager.cpp  enginenetworkmanager.h  typesnm.cpp  typesnm.h
src/backend/winnative/: enginewinnative.cpp  enginewinnative.h  profilewinnative.cpp  profilewinnative.h  typeswinnative.cpp  typeswinnative.h
src/backend/winrt/: permissionwinrt.cpp  permissionwinrt.h  typeswinrt.cpp  typeswinrt.h
src/cache/: cacheinfo.cpp  cacheinfo.h  cachepolicy.cpp  cachepolicy_priv.cpp  cachepolicy_priv.h
src/datas/: interface.cpp  interfacedata.cpp  interfacedata.h  interfacemutator.cpp  interfacemutator.h  network.cpp  networkdata.cpp  networkdata.h  networkmutator.cpp  networkmutator.h
src/mutators/: ifacemutator.cpp  ifacemutator.h  networkmutator.cpp  networkmutator.h
src/requests/: request.cpp  request.h  requestsqueue.cpp  requestsqueue.h
